--- a/public/src/src/constants.scss
+++ b/public/src/src/constants.scss
@@ -1,6 +1,13 @@
-$background : #252a38;
-$foreground :
-$background #252a38;
+// colors
+$background: #252a38;
 $darkerbackground: #151820;
 $defaultbackground: #dcdcdc;
 $primary: #2985ff;
+$overlay:#252a388f;
+
+//sizes
+$mobile-title:24px;
+$mobile-subtitle:20px;
+$mobile-button:20px;
+$mobile-body:14px;
+$mobile-secondary:10px;
