--- a/public/src/src/Components/posts/post/Post.scss
+++ b/public/src/src/Components/posts/post/Post.scss
@@ -1,5 +1,36 @@
 @import "../../../constants.scss";
 
 .post{
-    background-color: blueviolet;
+
+    background-color: $darkerbackground;
+    display:grid;
+    grid-template-columns: 40vw 1fr ;
+    grid-template-rows:  0.4fr 0.6fr;
+    height: 40vw;
+    width:40vw;
+    margin:0;
+img{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width:100%;
+    margin:0;
+
+}
+h2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-size: $mobile-subtitle;
+    margin:0;
+    justify-self: center;
+}
+p{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-size: $mobile-secondary;
+    margin:0;
+    align-self: center;
+    line-height: $mobile-subtitle-line-height;
+}
+
+
 }
