Completed Post.sccss

--- a/public/src/src/App.scss
+++ b/public/src/src/App.scss
@@ -1,5 +1,9 @@
+@import "./constants.scss";
+
 .App {
   text-align: center;
+  color:$defaultbackground;
+  background-color: $background;
 }
 
 .App-logo {
