--- a/public/src/src/Components/users/user/User.scss
+++ b/public/src/src/Components/users/user/User.scss
@@ -6,8 +6,8 @@
     background-color: blue;
     display:grid;
     grid-template-columns: 40vw 1fr ;
-    grid-template-rows:  0.4fr 0.6fr;
-    height: 8rem;
+    grid-template-rows:  0.4fr 0.3fr 0.3;
+    height: 9rem;
     align-items: center;
     
 
@@ -18,6 +18,7 @@
         height: 7rem;
         border: 0.25rem solid white;
         border-radius: 3.5rem;
+        margin: 0.5rem;
     }
 
     h2{
@@ -27,14 +28,19 @@
         margin:0;
         justify-self: center;
     }
-        p{
-        grid-column: 2/3;
-        grid-row: 2/3;
-        font-size: $mobile-secondary;
+    p{  font-size: $mobile-secondary;
         margin:0;
         align-self: center;
         line-height: $mobile-subtitle-line-height;
     
+    }
+    p.userName{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    p.email{
+        grid-column: 2/3;
+        grid-row: 3/4;    
     }
 
 }
