--- a/public/src/src/Components/navbar/NavBar.scss
+++ b/public/src/src/Components/navbar/NavBar.scss
@@ -1,13 +1,65 @@
 @import '../../constants.scss';
-
-nav {
+.head {
+    background-color: $darkerbackground;
     display: flex;
     justify-content: space-around;
+
+}
+.side-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background-color: $darkerbackground;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    right: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+      
+      /* The navigation menu links */
+      .sidenav a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+      
+      /* When you mouse over the navigation links, change their color */
+      .sidenav a:hover {
+        color: #f1f1f1;
+      }
+      
+      /* Position and style the close button (top right corner) */
+      .sidenav .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
     
     .nav-link {
         text-decoration: none;
         color: $defaultbackground;
+        margin: 2em;
     }
+
+    
+}
+
+.clicked {
+    width: 40vw;
+}
+
+button {
+    z-index: 2;
+    height: 50%;
+    align-self: center;
 }
