--- a/public/src/src/Components/users/user/User.scss
+++ b/public/src/src/Components/users/user/User.scss
@@ -1,48 +1,83 @@
 @import "../../../constants.scss";
 
 .user{
-    display: flex;
+
+    background-color: $darkerbackground;
     // background-color: $overlay;
-    background-color: blue;
     display:grid;
     grid-template-columns: 40vw 1fr ;
-    grid-template-rows:  0.4fr 0.3fr 0.3;
-    height: 9rem;
-    align-items: center;
-    
+    grid-template-rows:  0.4fr 0.6fr;
+    height: 40vw;
+    margin:0.5rem;
 
-    .profilePic{
-        grid-column: 1/2;
-        grid-row: 1/3;
-        width: 7rem;
-        height: 7rem;
-        border: 0.25rem solid white;
-        border-radius: 3.5rem;
-        margin: 0.5rem;
-    }
-
-    h2{
-        grid-column: 2/3;
-        grid-row: 1/2;
-        font-size: $mobile-subtitle;
-        margin:0;
-        justify-self: center;
-    }
-    p{  font-size: $mobile-secondary;
-        margin:0;
-        align-self: center;
-        line-height: $mobile-subtitle-line-height;
-    
-    }
-    p.userName{
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
-    p.email{
-        grid-column: 2/3;
-        grid-row: 3/4;    
-    }
+    img{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width:100%;
+    margin:0;
 
 }
+    .profilePic{
+        width: 6.5rem;
+        height: 6.5rem;
+        border: 0.25rem solid white;
+        border-radius: 3.5rem;
+        // margin: 0.5rem;
+        // box-sizing: border-box;
+        // position: absolute;
+        // top:67vh;
+        // left:1vw;
+        // z-index: 200;
+    }
+        // .userInfo{
+//         box-sizing: border-box;
+//         position: absolute;
+//         top:68vh;
+//         left:4vw;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: flex-start;
+//         margin-left: 10vw;
+        // background-color: $overlay;
+//         height: 6.5rem;
+//         width: 100vw;
+    // }
+    h2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-size: $mobile-subtitle;
+    margin:1em;
+    justify-self: center;
+}
+    p{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-size: $mobile-secondary;
+    margin:0;
+    // margin-left: 20vw;
+    align-self: left;
+    line-height: $mobile-subtitle-line-height;
+
+}
+p.userName{
+    font-weight: bolder;
+}
+
+a:link { 
+    text-decoration: none;
+    color: $defaultbackground
+}
+a:visited { 
+    text-decoration: none;
+    color: $defaultbackground 
+} 
+a:hover { text-decoration: none;
+    color: $defaultbackground 
+}
+a:active { text-decoration: none; 
+    color: $defaultbackground}
 
 
+   
+}
