--- a/public/src/src/Components/users/user/User.scss
+++ b/public/src/src/Components/users/user/User.scss
@@ -10,7 +10,7 @@
     height: 40vw;
     margin:0.5rem;
 
-    img{
+    img {
     grid-column: 1/2;
     grid-row: 1/3;
     width:100%;
@@ -22,27 +22,9 @@
         height: 6.5rem;
         border: 0.25rem solid white;
         border-radius: 3.5rem;
-        // margin: 0.5rem;
-        // box-sizing: border-box;
-        // position: absolute;
-        // top:67vh;
-        // left:1vw;
-        // z-index: 200;
+ 
     }
-        // .userInfo{
-//         box-sizing: border-box;
-//         position: absolute;
-//         top:68vh;
-//         left:4vw;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: flex-start;
-//         margin-left: 10vw;
-        // background-color: $overlay;
-//         height: 6.5rem;
-//         width: 100vw;
-    // }
+
     h2{
     grid-column: 2/3;
     grid-row: 1/2;
@@ -77,7 +59,29 @@ a:hover { text-decoration: none;
 }
 a:active { text-decoration: none; 
     color: $defaultbackground}
+}
+.userDetailProfile {
+    .profilePic {
+        margin: 0.5rem;
+        box-sizing: border-box;
+        position: absolute;
+        top:67vh;
+        left:1vw;
+        z-index: 200;
+    }
 
-
-   
+    .userInfo {
+        box-sizing: border-box;
+        position: absolute;
+        top:68vh;
+        left:4vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        margin-left: 10vw;
+        background-color: $overlay;
+        height: 6.5rem;
+        width: 100vw;
+    }
 }
