resized heading containers

--- a/public/src/src/Components/users/user/User.scss
+++ b/public/src/src/Components/users/user/User.scss
@@ -60,6 +60,9 @@ a:active { text-decoration: none;
     color: $defaultbackground}
 }
 .userDetailProfile {
+    background-color: inherit;
+    height: 7vh;
+
     .profilePic {
         margin: 0.5rem;
         box-sizing: border-box;
