changed button to burger menu

--- a/public/src/src/Components/navbar/NavBar.scss
+++ b/public/src/src/Components/navbar/NavBar.scss
@@ -5,6 +5,12 @@
     justify-content: space-around;
 
 }
+
+button {
+    background: none;
+    color: white;
+    font-size: 1.3em;
+}
 .side-nav {
     display: flex;
     flex-direction: column;
