--- a/public/src/src/Components/posts/post/Post.scss
+++ b/public/src/src/Components/posts/post/Post.scss
@@ -5,31 +5,43 @@
     background-color: $darkerbackground;
     display:grid;
     grid-template-columns: 40vw 1fr ;
-    grid-template-rows:  0.4fr 0.6fr;
+    grid-template-rows:  0.4fr 0.3fr 0.3fr;
     height: 40vw;
     margin:0.5rem;
 
-    img{
+    img {
     grid-column: 1/2;
     grid-row: 1/3;
     width:100%;
     margin:0;
 
 }
-    h2{
+    h2 {
     grid-column: 2/3;
     grid-row: 1/2;
     font-size: $mobile-subtitle;
-    margin:1em;
+    margin:0.5em;
     justify-self: center;
 }
-    p{
+    p {
     grid-column: 2/3;
     grid-row: 2/3;
     font-size: $mobile-secondary;
     margin:0;
     align-self: center;
     line-height: $mobile-subtitle-line-height;
-
+    }
 }
+
+.buttons {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    display: flex;
+    padding: 1em;
+    margin: 0;
+    padding: 0;
+    align-self: center;
+    justify-self: center;
+    font-size: 1em;
+    z-index: 0;
 }
